--- a/frontend/src/game.html
+++ b/frontend/src/game.html
@@ -50,7 +50,7 @@
         let opponentName;
         let gameId;
 
-        if (!playerName) {
+        if (!token) {
             alert('You must sign in first!');
             window.location.href = 'index.html';
         }
