--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -101,16 +101,17 @@
             .then(response => response.json())
             .then(data => {
                 if (data.error) {
-                    alert(data.error);
-                } else {
-                    localStorage.setItem('username', username);
-                    localStorage.setItem('token', data.data.IdToken);  // Store the ID token for authentication
-                    alert('Sign in successful!');
-                    alert('Your token is: ' + data.data.IdToken);
-                    window.location.href = 'game.html';
-                }
-            });
+                alert(data.error);
+            } else {
+                localStorage.setItem('username', username);
+                localStorage.setItem('token', data.tokens.IdToken);  // Store the ID token for authentication
+                alert('Sign in successful!');
+                alert('Your token is: ' + data.tokens.IdToken);
+                window.location.href = 'game.html';
         }
+    });
+}
+
     </script>
 </body>
 </html>
