--- a/frontend/src/game.html
+++ b/frontend/src/game.html
@@ -160,9 +160,24 @@
         }
 
         function logOff() {
-            localStorage.removeItem('username');
-            localStorage.removeItem('token');
-            window.location.href = 'index.html';
+            const token = localStorage.getItem('token');
+
+            fetch(`${SERVER_URL}/logoff`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ token })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    alert(data.error);
+                } else {
+                    localStorage.removeItem('username');
+                    localStorage.removeItem('token');
+                    alert('Logged off successfully!');
+                    window.location.href = 'index.html';
+                }
+            });
         }
     </script>
 </body>
