update url for logoof

--- a/frontend/src/game.html
+++ b/frontend/src/game.html
@@ -44,6 +44,7 @@
     <button class="button" onclick="logOff()">Log Off</button>
     <script>
         const SERVER_URL = 'ws://YOUR_SERVER_IP:8080';  // Update this to your WebSocket server URL
+        const SERVER_URL_HTTP = 'http://YOUR_SERVER_IP:8080';
         const token = localStorage.getItem('token');
         const ws = new WebSocket(`${SERVER_URL}?token=${token}`);
         let playerName = localStorage.getItem('username');
@@ -162,7 +163,7 @@
         function logOff() {
             const token = localStorage.getItem('token');
 
-            fetch(`${SERVER_URL}/logoff`, {
+            fetch(`${SERVER_URL_HTTP}/logoff`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ token })
