--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -113,7 +113,8 @@
                     alert(data.error);
                 } else {
                     localStorage.setItem('username', username);
-                    localStorage.setItem('token', data.tokens.IdToken);  // Store the ID token for authentication
+                    localStorage.setItem('token', data.tokens.IdToken);
+                    localStorage.setItem('refreshToken', data.tokens.RefreshToken);  // Store the ID token for authentication
                     alert('Sign in successful!');
                     alert('Your token is: ' + data.tokens.IdToken);
                     window.location.href = 'game.html';
